--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         
         <p class="text-center text-gray-400 text-xs mt-4">
-          Demo: user / 123456<br>mcjthebest / TherealMcj2
+          Demo: user / 123456<br>admin / 7890123
         </p>
       </div>
     </div>
@@ -471,8 +471,7 @@
 
     // LOGIN FUNCTIONS
     const validAccounts = [
-      { username: 'user', password: '123456' },
-      { username: 'mcjthebest', password: 'therealMcj2' }
+     { username: 'MonHub', password: 'MonTheGoatx' }
     ];
 
     function handleLogin() {
