--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         
         <p class="text-center text-gray-400 text-xs mt-4">
-          Demo: user / 123456<br>admin / 7890123
+          Demo: user / 123456<br>mcjthebest / TherealMcj2
         </p>
       </div>
     </div>
@@ -471,7 +471,8 @@
 
     // LOGIN FUNCTIONS
     const validAccounts = [
-     { username: 'MonHub', password: 'MonTheGoatx' }
+      { username: 'user', password: '123456' },
+      { username: 'MonHub', password: 'MonTheGoatx' }
     ];
 
     function handleLogin() {
